[gd_scene load_steps=2 format=3 uid="uid://b0j0ax14r8310"]

[ext_resource type="Script" path="res://main.gd" id="1_nphuj"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nphuj")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -128.0
offset_top = -64.0
offset_right = 128.0
offset_bottom = 64.0
alignment = 1

[node name="PortInput" type="LineEdit" parent="Menu"]
layout_mode = 2
offset_top = 13.0
offset_right = 256.0
offset_bottom = 44.0
placeholder_text = "Port"

[node name="AddressInput" type="LineEdit" parent="Menu"]
layout_mode = 2
offset_top = 48.0
offset_right = 256.0
offset_bottom = 79.0
placeholder_text = "Address"

[node name="Connect" type="Button" parent="Menu"]
layout_mode = 2
offset_top = 83.0
offset_right = 256.0
offset_bottom = 114.0
text = "Connect"

[connection signal="pressed" from="Menu/Connect" to="." method="_on_connect_pressed"]
